v0.6
- Added new stacking methods: Maximum, Minimum

v0.5.2 2014-09-07
- Can now add a finished master frame to a project. Only works in CLI. The
  command is "mosstack master <file> <type>"
- Cleanup of old deactivated lines of code.

v0.5.1 2014-09-04
- Implemented info box below the frame list. Info box shows many information
  about the selected frame.

v0.5.0
- Redesigned Frame - Batch relationship and added QFrame and QBatch to use
  with PyQt4 gui
- Multithreading on GUI. Somewhat working.
- Program icons added
- Executable names changed from camel case to lower case

v0.4.1 2014-07-30 -- Bugfix
- Gui now checks for pyopencl and does not assume it exists. This affects the
  gui only since cli already checks for opencl before use

v0.4.0 2014-05-23 -- Gui and sigma stacks
- Added sigma clipping and sigma median stacking methods where values that
  differ more than 3 times the standard deviation from the median are either
  ignored (clipped) or replaced with the median value
- Deactivated "Legacy" stacking method which is identical to Groth_ImageMagick,
  but a monolithic file. Code still exists.
- Deactivated debayering methods written in pure Python. They were slow and
  written only for testing purposes. Code still exists.
- Unified naming scheme of everything related to debayering. Every "demosaic"
  word has been replaced with "debayer". Also the methods now have used
  language as suffix, eg. BilinearOpenCl or VNGCython.
- Changed names of executable scripts to have no .py suffix. This complies with
  Debian standards and indeed is a better practise
- Added first version of graphical user interface written in PyQt4

v0.3.0 2014-04-08 -- Some more fixes and a bigger bump
- Fixed a lot of bugs caused by all the previous changes
- Realized there are so many new features that a bigger version bump is
  in place.

v0.2.5 2014-04-08 -- Affine transformation by Scipy
- Added affine transformation by SciPy. This makes so many things so much